samples/_failures_safe/1761429891_47be17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e175d101.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e175d101.c:182:27: error: expected ‘;’ at end of input
  182 |         visited[min_index]
      |                           ^
      |                           ;
./samples/SAFE/__tmp_e175d101.c:182:9: error: expected declaration or statement at end of input
  182 |         visited[min_index]
      |         ^~~~~~~
./samples/SAFE/__tmp_e175d101.c:182:9: error: expected declaration or statement at end of input
